<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/horizontalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/homeImg"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/baseline_home_24" />

        <ImageView
            android:id="@+id/shoppingCartImg"
            android:layout_width="295dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_add_shopping_cart_24"
            app:layout_constraintEnd_toStartOf="@+id/homeImg"
            app:layout_constraintTop_toTopOf="@+id/homeImg" />

        <ImageView
            android:id="@+id/chartBmiImg"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/shoppingCartImg"
            app:layout_constraintTop_toTopOf="@+id/shoppingCartImg"
            app:srcCompat="@drawable/baseline_bar_chart_24" />

    </LinearLayout>

    <EditText
        android:id="@+id/input_height"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="enter your height in cm"
        android:inputType="number" />

    <EditText
        android:id="@+id/input_weight"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="enter your weight in kg"
        android:inputType="number" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Calculate BMI" />

    <TextView
        android:id="@+id/display_bmi"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="#FAF7F7"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Clear all" />

</LinearLayout>
